# ai-models-gfs-cpr

./: pyproject.toml
src/ai_models/: __main__.py
src/ai_models/inputs/: __init__.py  test.py  testing.py
