#!/usr/bin/env python

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to run AI weather models with GFS initial conditions."
name = "ai-models-gfs"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Jacob Radford", email = "jacob.t.radford@gmail.com" },
]

keywords = ["tools", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "entrypoints",
    "requests",
    "climetlab>=0.23.0",
    "multiurl",
    "ecmwflibs>=0.6.1",
    "gputil",
    "earthkit-meteo",
    "pyyaml",
    "tqdm",
]


[project.urls]
Homepage = "https://github.com/jacob-radford/ai-models-gfs/"
Repository = "https://github.com/jacob-radford/ai-models-gfs"
Issues = "https://github.com/jacob-radford/ai-models-gfs"

[project.scripts]
ai-models = "ai_models.__main__:main"

[tool.setuptools_scm]
version_file = "src/ai_models/_version.py"

[project.entry-points."ai_models.input"]
file = "ai_models.inputs:FileInput"
mars = "ai_models.inputs:MarsInput"
cds = "ai_models.inputs:CdsInput"
gfs = "ai_models.inputs:GfsInput"
gdas = "ai_models.inputs:GdasInput"
opendata = "ai_models.inputs:OpenDataInput"

[project.entry-points."ai_models.output"]
file = "ai_models.outputs:FileOutput"
none = "ai_models.outputs:NoneOutput"
